# LLMOps

./: .gitignore  pyproject.toml
app/: __init__.py
app/http/: __init__.py  app.py  module.py
config/: __init__.py  config.py  default_config.py
internal/core/: __init__.py
internal/exception/: __init__.py  exception.py
internal/extension/: database_extension.py  migrate_extension.py
internal/handler/: __init__.py  app_handler.py
internal/model/: app.py
internal/router/: __init__.py  router.py
internal/schema/: __init__.py  app_schema.py
internal/server/: __init__.py  http.py
internal/service/: __init__.py  app_service.py
internal/task/: __init__.py
pkg/: __init__.py
pkg/response/: __init__.py  http_code.py  response.py
pkg/sqlalchemy/: __init__.py  sqlalchemy.py
storage/memory/: chat_history.txt
test/: conftest.py
test/internal/handler/: test_app_handler.py
