[tool.poetry]
name = "llmops"
version = "0.1.0"
description = ""
authors = ["rovenr12 <rovenr32@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
injector = "^0.21.0"
flask = "^3.0.3"
openai = "^1.33.0"
python-dotenv = "^1.0.1"
flask-wtf = "^1.2.1"
torch = { version = "2.3.1+cu118", source = "torch" }
pytest = "^8.2.2"
flask-sqlalchemy = "^3.1.1"
psycopg2 = "^2.9.9"
flask-migrate = "^4.0.7"
langchain = "^0.2.1"
langchain-community = "^0.2.1"
langchain-openai = "^0.1.8"


[[tool.poetry.source]]
name = "PyPI"
priority = "primary"


[[tool.poetry.source]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
priority = "supplemental"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
